# photo-ai

./: .gitignore  Makefile  README.md  debug_player_loading.py  photo_ai_gui.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  test.yml
photo_ai/: __init__.py
photo_ai/cli/: __init__.py  main.py
photo_ai/core/: __init__.py  config.py  photo_processor.py
photo_ai/gui/: __init__.py  app.py  main_window.py
photo_ai/gui/dialogs/: __init__.py  settings_dialog.py  visa_dialog.py
photo_ai/gui/widgets/: __init__.py  logger_widget.py  photo_viewer.py  processing_thread.py
photo_ai/processors/: __init__.py
photo_ai/processors/background/: __init__.py  remover.py
photo_ai/processors/enhancement/: __init__.py  auto_enhancer.py
photo_ai/processors/face/: __init__.py  detector.py  visa_processor.py
photo_ai/processors/quality/: __init__.py  duplicates.py  sharpness.py
photo_ai/processors/sports/: __init__.py  player_grouping.py
photo_ai/utils/: __init__.py  filename_generator.py  image_utils.py  time_utils.py
players/: jersey_numbers.json
scripts/: build.bat  build.py  build.sh  setup.bat  setup.py  setup.sh
src/: assessment.py  assessment2.py  blurry.py  get_duplicates.py  photo_ai.py  pick_sharp.py  remove_blurry.py  vit_score.py
src/china_visa/: china_visa_photo.py
