[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-ai"
version = "1.0.0"
description = "Advanced photo processing and analysis toolkit with desktop GUI and CLI interfaces"
authors = [
    {name = "Photo AI Team", email = "team@photo-ai.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["photo", "image", "processing", "ai", "machine-learning", "gui", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0", 
    "transformers>=4.20.0",
    "opencv-python>=4.5.0",
    "face-recognition>=1.3.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "PyQt6>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
]
build = [
    "pyinstaller>=5.0",
    "auto-py-to-exe>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/your-org/photo-ai"
Documentation = "https://github.com/your-org/photo-ai#readme"
Repository = "https://github.com/your-org/photo-ai.git"
"Bug Tracker" = "https://github.com/your-org/photo-ai/issues"

[project.scripts]
photo-ai = "photo_ai.cli.main:main"
photo-ai-gui = "photo_ai.gui.app:main"

[project.gui-scripts]
photo-ai-gui = "photo_ai.gui.app:main"


# Black configuration
[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]